--- a/gitlab/nginx/sites.conf
+++ b/gitlab/nginx/sites.conf
@@ -16,8 +16,8 @@ server {
     listen 80;
     listen 443 ssl;
     server_name         deckofcards.andrewzigler.com;
-    ssl_certificate     /nginx/certs/cards.andrewzigler.com.crt;
-    ssl_certificate_key /nginx/certs/cards.andrewzigler.com.key;
+    ssl_certificate     /nginx/certs/deckofcards.andrewzigler.com.crt;
+    ssl_certificate_key /nginx/certs/deckofcards.andrewzigler.com.key;
     ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
