--- a/gitlab/nginx/sites.conf
+++ b/gitlab/nginx/sites.conf
@@ -2,8 +2,8 @@ server {
     listen 80;
     listen 443 ssl;
     server_name         hc1.andrewzigler.com;
-    ssl_certificate     /nginx/certs/healthchecks.andrewzigler.com.crt;
-    ssl_certificate_key /nginx/certs/healthchecks.andrewzigler.com.key;
+    ssl_certificate     /nginx/certs/hc1.andrewzigler.com.crt;
+    ssl_certificate_key /nginx/certs/hc1.andrewzigler.com.key;
     ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
