--- a/gitlab/nginx/sites.conf
+++ b/gitlab/nginx/sites.conf
@@ -8,7 +8,7 @@ server {
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
     location / {
-        proxy_pass http://doc1.andrewzigler.com:8000;
+        proxy_pass http://hc1.andrewzigler.com:8000;
     }
 }
 
