--- a/gitlab/nginx/sites.conf
+++ b/gitlab/nginx/sites.conf
@@ -1,28 +1,28 @@
 server {
     listen 80;
     listen 443 ssl;
-    server_name         hc1.andrewzigler.com;
-    ssl_certificate     /nginx/certs/hc1.andrewzigler.com.crt;
-    ssl_certificate_key /nginx/certs/hc1.andrewzigler.com.key;
+    server_name         hc1.$DEMO_HOSTNAME;
+    ssl_certificate     /nginx/certs/hc1.$DEMO_HOSTNAME.crt;
+    ssl_certificate_key /nginx/certs/hc1.$DEMO_HOSTNAME.key;
     ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
     location / {
-        proxy_pass http://hc1.andrewzigler.com:8000;
+        proxy_pass http://hc1.$DEMO_HOSTNAME:8000;
     }
 }
 
 server {
     listen 80;
     listen 443 ssl;
-    server_name         doc1.andrewzigler.com;
-    ssl_certificate     /nginx/certs/doc1.andrewzigler.com.crt;
-    ssl_certificate_key /nginx/certs/doc1.andrewzigler.com.key;
+    server_name         doc1.$DEMO_HOSTNAME;
+    ssl_certificate     /nginx/certs/doc1.$DEMO_HOSTNAME.crt;
+    ssl_certificate_key /nginx/certs/doc1.$DEMO_HOSTNAME.key;
     ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
     location / {
-        proxy_pass http://doc1.andrewzigler.com:8005;
+        proxy_pass http://doc1.$DEMO_HOSTNAME:8005;
     }
 }
 
