Add docker hostname to config

--- a/mattermost/app/config/config.json
+++ b/mattermost/app/config/config.json
@@ -40,7 +40,7 @@
         "EnableOpenTracing": false,
         "EnableSecurityFixAlert": true,
         "EnableInsecureOutgoingConnections": false,
-        "AllowedUntrustedInternalConnections": "",
+        "AllowedUntrustedInternalConnections": "host.docker.internal",
         "EnableMultifactorAuthentication": false,
         "EnforceMultifactorAuthentication": false,
         "EnableUserAccessTokens": false,
